# ksl

./: .geminiignore  .gitignore  1215-15.json  1_csv.csv  2_prompt.md  5.mp4_1766_1938.csv  5_csv.csv  AGENTS.md  GEMINI.md  HandTurnDetector.hpp  VideoUtil-v1.1.h  anal_note.org  compare_csv.py  conversation_log.md  diff_result.csv  gRPCFileClient.h  gRPCFileClientDlg.h  gptel_conversation.org  ksl_sentence_recognition.grpc.pb.cc  ksl_sentence_recognition.grpc.pb.h  ksl_sentence_recognition.pb.h  pch.h  proto_data_structure.md  repomix-output-gRPC_client.zip.md  repomix-output-gRPC_server.zip.md  repomix-output-minwookhan-ksl.git.md  vibe_coding.json
c_lang_src/: CMakeLists.txt  Dockerfile  README.md  install_deps.sh  mp_detect.py
c_lang_src/protos/: ksl_sentence_recognition.proto
c_lang_src/src/: HandTurnDetector.hpp  Logic.cpp  Logic.hpp  MatTypeCaster.hpp  Network.cpp  Network.hpp  PoseEstimator.cpp  PoseEstimator.hpp  Utils.cpp  Utils.hpp  main.cpp
debug/5/669_835/: linux_669_835_debug.csv  linux_669_835_keyframe_.csv
ksl-cli/: 5.mp4_2328_2467.csv  jetson  jetson.pub  perf.data  perf_as_branch.txt  requirements.txt
ksl-cli/protos/: ksl_sentence_recognition.proto
ksl-cli/server/: main.py  paths.py  service.py  utils.py
ksl-cli/server/tests/: test_decoder.py  test_imports.py  test_service.py
ksl-cli/src/: ai.py  config.py  example.html  ksl_sentence_recognition_pb2.py  ksl_sentence_recognition_pb2_grpc.py  logic.py  main.py  mp_detect.py  network.py  video.py  video.py.html  video.tex
ksl-cli/tests/: test_ai.py  test_config.py  test_logic.py  test_main.py  test_network.py  test_transmission_logic.py  test_video.py
mfc_client_src/: VideoUtil-v1.1.cpp  gRPCFileClient.cpp  gRPCFileClient.vcxproj.filters  gRPCFileClientDlg.cpp  gRPCThread_.h  resource.h
mfc_client_src/ACR/: mp_detect.py
mfc_server/: ChangePointDetector.cpp  ChangePointDetector.h  ETRI_KSL_Excel_DB-v1.4.cpp  ETRI_KSL_Excel_DB-v1.4.h  ETRI_KSL_Excel_DB_Load-v1.4.cpp  HandConfidence.h  HandShapeDiff.hpp  InferSentence.cpp  InferSentence.h  KSLDBManager.aps  KSLDBManager.cpp  KSLDBManager.exp  KSLDBManager.h  KSLDBManager.lib  KSLDBManager.rc  KSLDBManager.vcxproj  KSLDBManager.vcxproj.filters  KSLDBManagerDlg.cpp  KSLDBManagerDlg.h  ManoPoseDiff.cpp  ManoPoseDiff.h  VideoUtil-v1.1.cpp  VideoUtil-v1.1.h  cfg-new.txt  gRPCThread.h  ksl_sentence_recognition.pb.cc  ksl_sentence_recognition.proto.txt  origin_numbers.txt  pch.cpp  resource.h
mfc_server/scripts/CP/: changePointVis.py  changepoint.py  changepointDetect.py  changepointTopN_test.ipynb  changepoint_confidence_test_csv.ipynb  thresholds.py
mfc_server/scripts/EXCEL/: excel.py
org_notes/: anal_mfc_anal.org  anal_note.html  anal_note.org  compare_code.org  function_flow.org  gptel_conversation.org  making_note.org  optical_flow.org  question_to_etri.org  temp.org  temp_devel.org
prompt_notes/: 1_propmt_프로젝트구조.md  AGENTS.md  README.md  pprompt.org  prompt.org
scripts/: test_cli.sh
